--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -23,16 +23,19 @@ jobs:
             bash -c "yes | buildozer android debug 2>&1 | tee build.log"
 
       - name: Upload APK
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: planewar-apk
           path: bin/*.apk
+          if-no-files-found: ignore
           retention-days: 30
 
-      - name: Upload build log on failure
-        if: failure()
+      - name: Upload build log
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: build-log
           path: build.log
+          if-no-files-found: ignore
           retention-days: 7
